2009-06-15 Kristin Branson

* When reading compressed AVIs with a keyframe in every frame, the buffer offset was not being set correctly initially (initialized to 1 instead of 0, which caused trouble when the length of the buffer was 1). Fixed this bug. 

2009-05-13 Kristin Branson

* For some types of compressed movies, we need to read in a frame before
seeking otherwise bad things happen. Added an unnecessary read to the 
CompressedMovie constructor. 

* Also added a check for None timestamp which seems to be returned for 
some types of compressed movies. 

* Added "Any" as a file type choice when opening movie. 

2009-05-12 Kristin Branson

* Version 0.1.4.1 released.

* Major changes:

  - Fixed bug in background estimation. "roi" attribute of background
    was not being initialized correctly. This caused the program to
    crash during background estimation. 

2009-05-11 Kristin Branson

* MANIFEST.in: Created this file to control which directories were
  added to the source distribution

* stdeb.cfg: Updated dependencies for deb package creation

* bg.py: Major bug fix. "roi" attribute, used for region of interest
  selection (introduced in version 0.1.4), was not being initialized
  correctly. 

2009-05-08 Kristin Branson

* Added text files with notes about how to make a new release of Ctrax
  to repository. 

2009-05-07 Kristin Branson

* Version 0.1.4 released. 

* Major changes:

  - Added "Regions of Interest" dialog for setting regions of interest
    in the frame. One can set polygonal regions of interest using the
    "Regions of Interest" dialog. Regions outside of all polygons set
    are assumed to be background. In this dialog, the image panel can
    show either the background model center or the currently selected
    regions of interest in white and the always-background regions in
    black. The previously selected polygons are shown by red lines. To
    select a region, click on the image. Continue clicking to add more